# korea-tourism-forecasting

./: .env.example  .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt
.github/workflows/: ci.yml
data/: README.md
data/processed/: exchange_rates_monthly.csv  foreign_visitors_monthly.csv  k_culture_interest_monthly.csv  search_trends_monthly.csv  tourism_features_monthly.csv  tourism_features_monthly_with_lags.csv
data/raw/exchange_rates/: krw_exchange_rates_monthly.csv  monthly_exchange_rates.csv
data/raw/foreign_visitors/: 입국_201501_201712.xls  입국_201801_202012.xls  입국_202101_202312.xls  입국_202401_202509.xls
data/raw/k_culture/web_search/: interest_BTS.csv  interest_Blackpink.csv  interest_Demon_Hunters.csv  interest_K_culture.csv  interest_K_drama.csv  interest_K_food.csv  interest_K_pop.csv  interest_Korean_culture.csv  interest_Korean_drama.csv  interest_Korean_food.csv  interest_Korean_pop.csv
data/raw/k_culture/youtube_search/: youtube_BTS.csv  youtube_Blackpink.csv  youtube_Demon_Hunters.csv  youtube_K_culture.csv  youtube_K_drama.csv  youtube_K_food.csv  youtube_K_pop.csv  youtube_Korean_culture.csv  youtube_Korean_drama.csv  youtube_Korean_pop.csv  (+1 more)
data/raw/search_trends/: google_k_trends_keywords_monthly.csv  youtube_k_trends_keywords_monthly.csv
docs/: DATA_SOURCES.md  METHODOLOGY.md  PUBLICATION_CHECKLIST.md
reports/: model_results.md
src/: build_dataset.py  fetch_exchange_rates.py  train_baseline.py
tests/: test_processed_data.py
