[project]
name = "korea-tourism-forecasting"
version = "0.1.0"
description = "Monthly forecasting of foreign tourism in Korea using K-culture interest and exchange-rate signals."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
authors = [
  { name = "K-Culture Tourism Forecasting contributors" }
]
keywords = ["tourism", "forecasting", "korea", "k-culture", "exchange-rates"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
